Increased Speed Ablility
Added cone that increases speed ( can change value of speed if needed)

--- a/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -292,10 +292,30 @@ StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+Speed_C.Tick=True
+Speed_C.Replication=True
+Speed_C.Rendering=True
+Speed_C.Collision=True
+Speed_C.Actor=True
+Speed_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+Speed_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/DoubleJump
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/Speed
+MRUItem1=/Game/FirstPersonBP/Blueprints/DoubleJump
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -338,6 +358,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Speed.Speed;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump;
 
 [RootWindow]
