--- a/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -311,15 +311,96 @@ SceneComponent.Events=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 Speed_C.TransformCommon=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+TextRenderActor.HLOD=False
+TextRenderActor.Mobile=False
+TextRenderActor.AssetUserData=False
+MovingpLAT_C.Tick=True
+MovingpLAT_C.Replication=True
+MovingpLAT_C.Rendering=True
+MovingpLAT_C.Collision=True
+MovingpLAT_C.Actor=True
+MovingpLAT_C.Input=True
+InterpToMovementComponent.Variable=True
+InterpToMovementComponent.Sockets=True
+InterpToMovementComponent.Control=True
+InterpToMovementComponent.Behaviour=True
+InterpToMovementComponent.Simulation=True
+InterpToMovementComponent.PlanarMovement=True
+InterpToMovementComponent.ComponentTick=True
+InterpToMovementComponent.MovementComponent=True
+InterpToMovementComponent.Tags=True
+InterpToMovementComponent.ComponentReplication=True
+InterpToMovementComponent.Activation=True
+InterpToMovementComponent.Cooking=True
+InterpToMovementComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_MakeStruct.PinOptions=True
+MovingpLAT_C.TransformCommon=True
+MovingpLAT_C.Default=True
+MovingpLAT_C.Components=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Speed
-MRUItem1=/Game/FirstPersonBP/Blueprints/DoubleJump
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/MovingpLAT
+MRUItem1=/Game/FirstPersonBP/Blueprints/Speed
+MRUItem2=/Game/FirstPersonBP/Blueprints/DoubleJump
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump=1
+/Game/FirstPersonBP/Blueprints/Speed.Speed=1
+/Game/FirstPersonBP/Blueprints/MovingpLAT.MovingpLAT=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -358,6 +439,9 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MovingpLAT.MovingpLAT;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Speed.Speed;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump;
 
@@ -1272,4 +1356,31 @@ BlueprintGraph.TimeStamp=2021.09.25-14.58.34
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2021.09.25-14.58.38
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[DetailCustomWidgetExpansion]
+TextRenderActor=TextRenderActor.Rendering.LOD,
+SceneComponent=
+BrushComponent=
+Speed_C=TextRenderActor.Rendering.LOD,
+Brush=TextRenderActor.Rendering.LOD,
+DoubleJump_C=TextRenderActor.Rendering.LOD,
+BP_Sky_Sphere_C=TextRenderActor.Rendering.LOD,
+Actor=TextRenderActor.Rendering.LOD,
+MovingpLAT_C=TextRenderActor.Rendering.LOD,
+CapsuleComponent=TextRenderActor.Rendering.LOD,
+PropertyWrapper=TextRenderActor.Rendering.LOD,
+FirstPersonCharacter_C=TextRenderActor.Rendering.LOD,
+
+[DetailPropertyExpansion]
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+InterpToMovementComponent=
+MovementComponent=
+ActorComponent=
+Object=
+MovingpLAT_C="\"Object.Components.Location2\" "
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
