--- a/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -253,7 +253,7 @@ MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -307,7 +307,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PluginBrowser]
@@ -947,7 +947,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Github/One-Person-Prototype/OnePersonAssignment/Content/FirstPersonBP/Maps
-UNR=../../../../../../Users/Akela/Documents/GitHub/One-Person-Prototype/OnePersonAssignment/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/buber/Documents/Unreal Projects/Game/One-Person-Prototype/OnePersonAssignment/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/buber/Documents/Unreal Projects/Game/One-Person-Prototype/OnePersonAssignment/Content/
 BRUSH=../../../../../../Users/buber/Documents/Unreal Projects/Game/One-Person-Prototype/OnePersonAssignment/Content/
 FBX=../../../../../../Users/buber/Documents/Unreal Projects/Game/One-Person-Prototype/OnePersonAssignment/Content/
