--- a/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/OnePersonAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPreferToStreamLevelsInPIE=False
 NewWindowPosition=(X=-1,Y=-1)
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
@@ -188,7 +188,7 @@ ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=0,Y=0)
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-S21KDGF
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-S21KDGF
 LastExecutedLaunchName=DESKTOP-S21KDGF
@@ -199,6 +199,7 @@ DeviceToEmulate=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -253,7 +254,7 @@ MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -308,7 +309,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -809,23 +809,42 @@ CameraComponent.Events=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Collision=True
+NewBlueprint_C.Actor=True
+NewBlueprint_C.Input=True
+WallJump_C.TransformCommon=True
+WallJump_C.Rendering=True
+WallJump_C.Replication=True
+WallJump_C.Collision=True
+WallJump_C.Input=True
+WallJump_C.Actor=True
+JumpWall_C.Actor=True
+JumpWall_C.Input=True
+JumpWall_C.Collision=True
+JumpWall_C.Replication=True
+JumpWall_C.Rendering=True
+JumpWall_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Blueprints/Speed
-MRUItem3=/Game/FirstPersonBP/Blueprints/DoubleJump
-MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
-MRUItem5=/Game/FirstPersonBP/Maps/TEST
-MRUItem6=/Game/FirstPersonBP/Blueprints/Game_Over
-MRUItem7=/Game/FirstPersonBP/Blueprints/Timer
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Blueprints/Speed
+MRUItem2=/Game/FirstPersonBP/Blueprints/DoubleJump
+MRUItem3=/Game/FirstPersonBP/Blueprints/NewBlueprint
+MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
+MRUItem6=/Game/FirstPersonBP/Maps/TEST
+MRUItem7=/Game/FirstPersonBP/Blueprints/Game_Over
+MRUItem8=/Game/FirstPersonBP/Blueprints/Timer
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump=1
-/Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump=1
+/Game/FirstPersonBP/Blueprints/DoubleJump.DoubleJump=0
 /Game/FirstPersonBP/Blueprints/Speed.Speed=1
 /Game/FirstPersonBP/Blueprints/MovingpLAT.MovingpLAT=1
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=0
@@ -904,6 +923,7 @@ NodeTemplateCacheCapMB=20.000000
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/WallJump.WallJump;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/MovingpLAT.MovingpLAT;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2748,6 +2768,8 @@ K2Node_VariableGet=TextRenderActor.Rendering.LOD,
 K2Node_VariableSet=TextRenderActor.Rendering.LOD,
 Timer_C=TextRenderActor.Rendering.LOD,
 PlayerController=
+WallJump_C=
+JumpWall_C=
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2840,5 +2862,5 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
